[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/SmartCamera/SmartCamera.gd" type="Script" id=1]

[node name="SmartCamera" type="Camera2D"]
limit_left = 0
limit_top = 0
limit_right = 0
limit_bottom = 0
script = ExtResource( 1 )

[node name="Limits" type="Node" parent="."]

[node name="TopLeft" type="Position2D" parent="Limits"]

[node name="BottomRight" type="Position2D" parent="Limits"]
position = Vector2( 320.066, 179.952 )
